--- a/contactus.html
+++ b/contactus.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Bootstrap Example</title>
+  <title>Contact Us</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/responsive.css">
-    <script type="text/javascript" language="javascript">
+    <!--<script type="text/javascript" language="javascript">
         $(function() {
             $(this).bind("contextmenu", function(e) {
                 e.preventDefault();
@@ -20,13 +20,13 @@
         document.onkeydown = function (e) {
         return false;
 }
-</script>
+</script>-->
 </head>
 <body>  
     <!-- 
 Custom nvbar color 
 -->
-<nav class="navbar navbar-expand-sm sticky-top navbar-custom py-0">
+<nav class="navbar navbar-expand-sm  navbar-custom py-sm-4 py-md-4">
     <div class="container">
     <a href="index.html" class="navbar-brand d-logo "><img src="images/logo.svg"/></a>
     <a href="index.html" class="navbar-brand  m-logo  "><img src="images/from-the-team-icon.png"/></a>
@@ -36,11 +36,11 @@ Custom nvbar color
     </button>
     <div class="navbar-collapse collapse" id="navbarCustom">  
         <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
+            <li class="nav-item">
                 <a class="nav-link" href="project.html">Project</a>
             </li>      
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a class="nav-link dropdown-toggle" href="learn.html" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Learn
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -56,7 +56,7 @@ Custom nvbar color
             <li class="nav-item">
                 <a class="nav-link" href="faq.html">FAQ</a>
             </li>
-             <li class="nav-item">
+             <li class="nav-item active">
                 <a class="nav-link" href="contactus.html">Contact us</a>
             </li>
              <li class="nav-item">
@@ -76,13 +76,13 @@ Custom nvbar color
     </section>
 <div class="container">
   <div class="row">
-    <div class="col-sm-9">
+    <div class="col-sm-12 col-ms-12 col-lg-9 col-xl-9">
         <div class="card  custom-card">        
                 
             <div class="card-body custom-card-body">
                 <div class="row">
                 
-             <div class="col-sm-7">
+             <div class="col-sm-12 col-md-9 col-lg-8 col-xl-8">
                 <p class="mb-4 pb-3">Questions? Comments? Please feel free to contact us at any time</p>
                <form action="/action_page.php">
   <div class="form-group">
