--- a/contactus.html
+++ b/contactus.html
@@ -26,7 +26,7 @@
     <!-- 
 Custom nvbar color 
 -->
-<nav class="navbar navbar-expand-sm  navbar-custom py-sm-4 py-md-4">
+<nav class="navbar navbar-expand-sm  navbar-custom py-0">
     <div class="container">
     <a href="index.html" class="navbar-brand d-logo "><img src="images/logo.svg"/></a>
     <a href="index.html" class="navbar-brand  m-logo  "><img src="images/from-the-team-icon.png"/></a>
@@ -44,13 +44,12 @@ Custom nvbar color
                   Learn
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Basic</a>
-                    <a class="dropdown-item" href="#">What is evidance-based measurement?</a>
-                    <a class="dropdown-item" href="#">Surveys</a>
-                
-                    <a class="dropdown-item" href="#">Program Manuals</a>
-                    <a class="dropdown-item" href="#">Reports</a>
-                    <a class="dropdown-item" href="#">Plan</a>
+                    <a class="dropdown-item" href="learn.html">Basic</a>
+                    <a class="dropdown-item" href="learn.html">What is evidance-based measurement?</a>
+                    <a class="dropdown-item" href="learn.html">Surveys</a>
+                    <a class="dropdown-item" href="learn.html">Program Manuals</a>
+                    <a class="dropdown-item" href="learn.html">Reports</a>
+                    <a class="dropdown-item" href="learn.html">Plan</a>
                 </div>
             </li>
             <li class="nav-item">
