--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             </div>
         </div>
     </section>
-    
+
     <section class="bar"> </section>
     <section class="report-issue">
         <div class="container">
@@ -231,6 +231,4 @@
             </div>
         </div>
     </footer>
-</body>
-
-</html>
+</body></html>
